Opened 5 years ago

Closed 5 years ago

Last modified 5 years ago

#15749 closed bug (fixed)

[atheroswifi] PANIC: mutex_destroy(): the lock (0xffffffff85461828) is held by 0, not by the caller

Reported by: sunnysideup Owned by: waddlesplash
Priority: normal Milestone: R1/beta2
Component: Drivers/Network/atheroswifi Version: R1/Development
Keywords: Cc:
Blocked By: Blocking: #15822
Platform: All

Description (last modified by sunnysideup)

After being advised on the IRC chats to raise a ticket for my problem, here's my attempt to describe the issue in a clear and concise manner.

I had built haiku from source to get the anyboot-nightly iso file, which I'd tested on qemu-kvm.

I wanted to try this on my real machine, which, although a little old, shouldn't show any errors (I was told RAM might be an issue - It has a 2GB DDR2).

This is what happens when I boot into it.

https://imgur.com/bVCeKuR

I also tried downloading prebuilt nightlies and booting into those. Same result.

I was advised to post the logs from /system/var/log.

So I tried to get the syslog after the first boot attempt. (Prebuilt nightly) (PS. I've tried to disable ACPI and also tried to enable failsafe graphics. This just has me stuck on a blue screen)

I don't get a syslog :(

I try failsafe graphics and disabling ACPI. I still don't get a syslog.

PS. I'm using a bootable USB to boot the anyboot-iso

Attachments (5)

HaikuError-min.jpg (1.8 MB ) - added by sunnysideup 5 years ago.
This is a decent quality image
syslog (115.3 KB ) - added by sunnysideup 5 years ago.
/system/var/syslog - The systemlog after boot into Haiku (safemode + failsafe graphics)
FailsafeGraphics-min.jpg (2.0 MB ) - added by sunnysideup 5 years ago.
Only failsafe graphics enabled
Message-min.jpg (2.0 MB ) - added by sunnysideup 5 years ago.
Error message
Bt-min.jpg (2.0 MB ) - added by sunnysideup 5 years ago.
The debug screen after I do bt

Change History (19)

comment:1 by sunnysideup, 5 years ago

Description: modified (diff)

comment:2 by diver, 5 years ago

Component: - GeneralDrivers/Network

This looks like a combination of 2 problems happening at the same time:

Corrupted graphics - never seen this before in any other ticket.
Network driver crash, unfortunately, the name of the driver is cut off.

What you can do is to enable both fail-safe graphics driver and safe mode. If that won't help see this article https://dev.haiku-os.org/wiki/ReportingBugs#OnScreenDebugOutput

Taking another picture might also help.

comment:3 by WildKeccak, 5 years ago

How long did you wait at the blue screen? I don't think the nightly isos come up quickly even on my gaming computer.

comment:4 by sunnysideup, 5 years ago

I waited a pretty long time (20 mins!).

by sunnysideup, 5 years ago

Attachment: HaikuError-min.jpg added

This is a decent quality image

comment:5 by diver, 5 years ago

Component: Drivers/NetworkDrivers/Network/atheroswifi
Owner: changed from nobody to waddlesplash

You can blacklist atheroswifi driver in the bootloader and see if it gets any futher.

comment:6 by sunnysideup, 5 years ago

Update: Enabling safe mode (Enable safe mode, continue booting) gets me into Haiku! I'll upload the syslog now

by sunnysideup, 5 years ago

Attachment: syslog added

/system/var/syslog - The systemlog after boot into Haiku (safemode + failsafe graphics)

by sunnysideup, 5 years ago

Attachment: FailsafeGraphics-min.jpg added

Only failsafe graphics enabled

by sunnysideup, 5 years ago

Attachment: Message-min.jpg added

Error message

by sunnysideup, 5 years ago

Attachment: Bt-min.jpg added

The debug screen after I do bt

comment:7 by waddlesplash, 5 years ago

Seems like the driver failed to fully initialize, and in a way that it tried to deinitialize but then crashed. Try blacklisting it.

comment:8 by diver, 5 years ago

Blocking: 15822 added

comment:9 by diver, 5 years ago

Summary: Problems booting into Haiku[atheroswifi] PANIC: mutex_destroy(): the lock (0xffffffff85461828) is held by 0, not by the caller

comment:10 by waddlesplash, 5 years ago

OK, I think I see the issue. I'll try to write a fix tomorrow.

comment:11 by waddlesplash, 5 years ago

Should be fixed in hrev54010, please test.

comment:12 by sunnysideup, 5 years ago

Sure, but it'll take some time to test because of the quarantine :(. I don't have the machine with me right now

comment:13 by diver, 5 years ago

Resolution: fixed
Status: newclosed

Confirmed that the panic is gone by reporter of #15822.

comment:14 by nielx, 5 years ago

Milestone: UnscheduledR1/beta2

Assign tickets with status=closed and resolution=fixed within the R1/beta2 development window to the R1/beta2 Milestone

Note: See TracTickets for help on using tickets.